--- a/src/components/input/styles.scss
+++ b/src/components/input/styles.scss
@@ -3,7 +3,7 @@
     border: none;
     border-bottom: 1px solid #dddddd;
     background-color: transparent;
-    padding-bottom: 0.5rem;
+    padding: 0.5rem 0;
     margin-bottom: 2rem;
     width: 20rem;
   }
