styles: auth shadow variable added

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -2,13 +2,14 @@
 $default-font-size: 1.6rem;
 
 // SHADOWS
-$card-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+$shadow-auth: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+$shadow-card: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
   rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
 
 // COLORS
 $color-white: #fff;
-$color-gray: #f5f5f5ff;
-$color-gray-light: #f1f3f5ff;
+$color-gray: #f1f3f5ff;
+$color-gray-light: #f5f5f5ff;
 $color-gray-dark: #191919ff;
 $color-blue: #2855a6ff;
 $color-blue-light: #309be4ff;
