--- a/src/pages/auth/styles.scss
+++ b/src/pages/auth/styles.scss
@@ -10,7 +10,7 @@
     flex-direction: column;
     align-items: center;
 
-    @include respond(tab-port) {
+    @include respond(desktop) {
       background-color: $color-white;
       box-shadow: $shadow-auth;
       border-radius: 25px;
