--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -4,20 +4,40 @@ body {
 }
 
 .title {
-  font-size: 4.2rem;
+  font-size: 3.7rem;
+
+  @include respond(desktop) {
+    font-size: 4.2rem;
+  }
 }
 
 .heading__primary {
-  font-size: 3.2rem;
+  font-size: 2.7rem;
+
+  @include respond(tablet) {
+    font-size: 3.2rem;
+  }
 }
 
 .heading__secondary {
-  font-size: 2.4rem;
+  font-size: 1.9rem;
+
+  @include respond(tablet) {
+    font-size: 2.4rem;
+  }
 }
 .heading__tertiary {
-  font-size: 2.1rem;
+  font-size: 1.6rem;
+
+  @include respond(tablet) {
+    font-size: 2.1rem;
+  }
 }
 
 .paragraph {
   font-size: $default-font-size;
+
+  @include respond(desktop) {
+    font-size: 4.2rem;
+  }
 }
