--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -19,3 +19,6 @@
 
 @import '../pages/auth/styles.scss';
 @import '../pages/dashboard/styles.scss';
+@import '../pages/manage/styles.scss';
+@import '../pages/posts/styles.scss';
+@import '../pages/users/styles.scss';
