--- a/src/components/header/styles.scss
+++ b/src/components/header/styles.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   background-color: $color-white;
-  padding: 3rem;
+  padding: 3rem 2rem;
   box-shadow: $shadow-auth;
 
   @include respond(desktop) {
