--- a/src/components/user-card/styles.scss
+++ b/src/components/user-card/styles.scss
@@ -3,12 +3,14 @@
   box-shadow: $shadow-dark;
   border-radius: 15px;
   margin: 1rem 0.5rem 2rem;
-  padding: 2rem 4rem;
+  padding: 2rem 1rem;
+  cursor: pointer;
 
   @include respond(desktop) {
     display: flex;
-    justify-content: space-around;
+    justify-content: flex-start;
     align-items: center;
+    gap: 2rem;
     margin-bottom: 2rem;
     width: 25rem;
   }
