fix: imports fixed

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -20,5 +20,5 @@
 @import '../pages/auth/styles.scss';
 @import '../pages/dashboard/styles.scss';
 @import '../pages/manage/styles.scss';
-@import '../pages/posts/styles.scss';
-@import '../pages/users/styles.scss';
+@import '../pages/all-posts/styles.scss';
+@import '../pages/all-users/styles.scss';
