--- a/src/components/user-card/styles.scss
+++ b/src/components/user-card/styles.scss
@@ -5,14 +5,18 @@
   margin: 1rem 0.5rem 2rem;
   padding: 2rem 1rem;
   cursor: pointer;
+  min-width: 15rem;
+
+  &__img {
+    width: 5rem;
+  }
 
   @include respond(desktop) {
     display: flex;
     justify-content: flex-start;
     align-items: center;
     gap: 2rem;
-    margin-bottom: 2rem;
-    width: 25rem;
+    min-width: 25rem;
   }
 
   &__img {
