--- a/src/pages/manage/styles.scss
+++ b/src/pages/manage/styles.scss
@@ -2,6 +2,10 @@
   text-align: center;
   position: relative;
 
+  &__title {
+    margin-bottom: 2rem;
+  }
+
   &__empty {
     @include respond(desktop) {
       display: flex;
@@ -37,7 +41,7 @@
       box-shadow: $shadow-auth;
       padding: 3rem 4rem;
       margin-top: 1.5rem;
-      height: 53rem;
+      height: 55rem;
       overflow-y: scroll;
       overflow-x: hidden;
     }
