styles: mobile and desktop default font size modified

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -1,5 +1,6 @@
 // FONTS
-$default-font-size: 1.6rem;
+$mobile-font-size: 1.8rem;
+$desktop-font-size: 1.6rem;
 
 // SHADOWS
 $shadow-auth: rgba(17, 17, 26, 0.1) 0px 0px 16px;
