styles: main and variables styles modified

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -16,6 +16,7 @@
 @import '../components/post-card/styles.scss';
 @import '../components/user-card/styles.scss';
 @import '../components/waves/styles.scss';
+@import '../components/dropdown-menu/styles.scss';
 
 @import '../pages/auth/styles.scss';
 @import '../pages/dashboard/styles.scss';
