--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -6,6 +6,8 @@ $desktop-font-size: 1.6rem;
 $shadow-auth: rgba(17, 17, 26, 0.1) 0px 0px 16px;
 $shadow-dark: rgba(60, 64, 67, 0.227) 0px 1px 2px 0px,
   rgba(60, 64, 67, 0.129) 0px 2px 6px 2px;
+$shadow-menu: rgba(50, 50, 93, 0.226) 0px 13px 27px -5px,
+  rgba(0, 0, 0, 0.212) 0px 8px 16px -8px;
 // COLORS
 $color-white: #fff;
 $color-gray: #e5eaee;
