--- a/src/components/dropdown-menu/styles.scss
+++ b/src/components/dropdown-menu/styles.scss
@@ -8,6 +8,10 @@
     cursor: pointer;
   }
 
+  &__dots {
+    font-size: 1.5rem;
+  }
+
   &__options {
     display: flex;
     flex-direction: column;
