--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -12,7 +12,7 @@ $shadow-menu: rgba(50, 50, 93, 0.226) 0px 13px 27px -5px,
 $color-white: #fff;
 $color-gray: #e5eaee;
 $color-gray-light: #f5f5f5ff;
-$color-gray-dark: #27282a;
+$color-gray-dark: #3b3d41;
 $color-blue: #2855a6ff;
 $color-blue-light: #309be4ff;
 $color-green: #65b12bff;
