--- a/src/components/aside-menu/styles.scss
+++ b/src/components/aside-menu/styles.scss
@@ -1,5 +1,70 @@
 .aside {
-  background-color: $color-blue;
-  height: 100vh;
-  width: 15rem;
+  @include respond(desktop) {
+    color: $color-white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    background-color: $color-blue;
+    padding: 4rem 0;
+    height: 100vh;
+    width: 15rem;
+
+    &__profile {
+      margin-bottom: 5rem;
+    }
+
+    &__avatar {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: $color-white;
+      border-radius: 50%;
+      margin-bottom: 1rem;
+      height: 8rem;
+      width: 8rem;
+    }
+
+    &__img {
+      width: 6rem;
+    }
+
+    &__welcome {
+      font-weight: lighter;
+    }
+
+    &__username {
+      margin-bottom: 1rem;
+    }
+
+    &__admin {
+      color: $color-blue-light;
+    }
+
+    &__nav {
+      display: flex;
+      flex-direction: column;
+    }
+
+    &__links {
+      cursor: pointer;
+      padding: 2rem 4rem;
+      text-decoration: none;
+      color: $color-white;
+      transition: all 0.1s;
+
+      &:hover {
+        background-color: $color-blue-dark !important;
+      }
+    }
+
+    &__icons {
+      font-size: 3rem;
+      margin-bottom: 1rem;
+    }
+
+    &__text {
+      font-weight: lighter;
+    }
+  }
 }
