--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -14,6 +14,7 @@ $color-gray: #e5eaee;
 $color-gray-light: #f5f5f5ff;
 $color-gray-dark: #3b3d41;
 $color-blue: #2855a6ff;
+$color-blue-dark: #1c4998;
 $color-blue-light: #309be4ff;
 $color-green: #65b12bff;
 $color-red: #e60023ff;
