chore: user info imported

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,6 +15,7 @@
 @import '../components/title/styles.scss';
 @import '../components/post-card/styles.scss';
 @import '../components/user-card/styles.scss';
+@import '../components/user-info/styles.scss';
 @import '../components/waves/styles.scss';
 @import '../components/dropdown-menu/styles.scss';
 
