feat: filter users functionality implemented and styles modified

--- a/src/pages/all-users/styles.scss
+++ b/src/pages/all-users/styles.scss
@@ -8,6 +8,7 @@
 
     @include respond(desktop) {
       grid-template-columns: repeat(3, 1fr);
+      grid-template-rows: repeat(4, 1fr);
       overflow-y: scroll;
       height: 55rem;
       margin: 0 5rem;
