--- a/src/pages/manage/styles.scss
+++ b/src/pages/manage/styles.scss
@@ -14,6 +14,12 @@
       height: 100%;
       width: 80rem;
     }
+
+    &--user {
+      @include respond(desktop) {
+        max-width: 26.5rem;
+      }
+    }
   }
 
   &__section {
