styles: aside menu and button styles modified

--- a/src/components/button/styles.scss
+++ b/src/components/button/styles.scss
@@ -2,7 +2,7 @@
   display: inline-block;
   background-color: $color-blue-light;
   border-radius: 5px;
-  padding: 1rem 0;
+  padding: 1rem 10rem;
   text-transform: uppercase;
   transition: all 0.1s;
   width: 100%;
