--- a/src/components/aside-menu/styles.scss
+++ b/src/components/aside-menu/styles.scss
@@ -20,7 +20,7 @@
       align-items: center;
       background-color: $color-white;
       border-radius: 50%;
-      margin-bottom: 1rem;
+      margin: 1rem auto;
       height: 8rem;
       width: 8rem;
     }
