styles: misc styles modified

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -22,3 +22,4 @@
 @import '../pages/dashboard/styles.scss';
 @import '../pages/manage/styles.scss';
 @import '../pages/all-users/styles.scss';
+@import '../pages/admin-profile/styles.scss';
