--- a/src/components/aside-menu/styles.scss
+++ b/src/components/aside-menu/styles.scss
@@ -1,85 +1,100 @@
 .aside {
-  @include respond(desktop) {
+  color: $color-white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  background-color: $color-blue;
+  padding: 4rem 0;
+  height: 100vh;
+  width: 15rem;
+
+  &__profile {
+    margin-bottom: 5rem;
+    text-align: center;
+  }
+
+  &__avatar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: $color-white;
+    border-radius: 50%;
+    margin: 1rem auto;
+    height: 8rem;
+    width: 8rem;
+  }
+
+  &__img {
+    width: 6rem;
+  }
+
+  &__welcome {
+    color: $color-gray-dark;
+
+    @include respond(desktop) {
+      font-weight: lighter;
+      color: $color-white;
+    }
+  }
+
+  &__username {
+    margin-bottom: 1rem;
+    color: $color-gray-dark;
+    font-weight: bold;
+
+    @include respond(desktop) {
+      color: $color-white;
+    }
+  }
+
+  &__admin {
+    color: $color-blue-light;
+    margin-bottom: 1rem;
+    font-size: 1.6rem;
+
+    @include respond(desktop) {
+      font-size: $desktop-font-size;
+    }
+  }
+
+  &__adminprofile {
     color: $color-white;
+    background-color: transparent;
+    border: 1px solid $color-blue-light;
+    border-radius: 50px;
+    padding: 0.5rem 2rem;
+    transition: all 0.1s;
+    cursor: pointer;
+
+    &:hover {
+      background-color: $color-green;
+    }
+  }
+
+  &__nav {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    text-align: center;
-    background-color: $color-blue;
-    padding: 4rem 0;
-    height: 100vh;
-    width: 15rem;
+  }
 
-    &__profile {
-      margin-bottom: 8rem;
+  &__links {
+    cursor: pointer;
+    padding: 2rem 4rem;
+    text-decoration: none;
+    color: $color-white;
+    transition: all 0.1s;
+
+    &:hover {
+      background-color: $color-blue-dark !important;
     }
+  }
 
-    &__avatar {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background-color: $color-white;
-      border-radius: 50%;
-      margin: 1rem auto;
-      height: 8rem;
-      width: 8rem;
-    }
+  &__icons {
+    font-size: 3rem;
+    margin-bottom: 1rem;
+  }
 
-    &__img {
-      width: 6rem;
-    }
-
-    &__welcome {
-      font-weight: lighter;
-    }
-
-    &__username {
-      margin-bottom: 1rem;
-    }
-
-    &__admin {
-      color: $color-blue-light;
-      margin-bottom: 1rem;
-    }
-
-    &__adminprofile {
-      color: $color-white;
-      background-color: transparent;
-      border: 1px solid $color-blue-light;
-      border-radius: 50px;
-      padding: 0.5rem 2rem;
-      transition: all 0.1s;
-      cursor: pointer;
-
-      &:hover {
-        background-color: $color-green;
-      }
-    }
-
-    &__nav {
-      display: flex;
-      flex-direction: column;
-    }
-
-    &__links {
-      cursor: pointer;
-      padding: 2rem 4rem;
-      text-decoration: none;
-      color: $color-white;
-      transition: all 0.1s;
-
-      &:hover {
-        background-color: $color-blue-dark !important;
-      }
-    }
-
-    &__icons {
-      font-size: 3rem;
-      margin-bottom: 1rem;
-    }
-
-    &__text {
-      font-weight: lighter;
-    }
+  &__text {
+    font-weight: lighter;
   }
 }
