chore: burguer menu styles imported in main

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -17,6 +17,7 @@
 @import '../components/user-info/styles.scss';
 @import '../components/waves/styles.scss';
 @import '../components/dropdown-menu/styles.scss';
+@import '../components/burguer-menu/styles.scss';
 
 @import '../pages/auth/styles.scss';
 @import '../pages/dashboard/styles.scss';
