styles: input padding modified

--- a/src/components/input/styles.scss
+++ b/src/components/input/styles.scss
@@ -3,7 +3,7 @@
     border: none;
     border-bottom: 1px solid #dddddd;
     background-color: transparent;
-    padding: 0.5rem 0;
+    padding: 0.5rem 1rem;
     margin-bottom: 3.2rem;
     width: 25rem;
   }
