chore: searchbar styles imported

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,6 +11,7 @@
 @import '../components/button/styles.scss';
 @import '../components/input/styles.scss';
 @import '../components/header/styles.scss';
+@import '../components/search-bar/styles.scss';
 @import '../components/aside-menu/styles.scss';
 @import '../components/post-card/styles.scss';
 @import '../components/user-card/styles.scss';
@@ -18,6 +19,7 @@
 @import '../components/waves/styles.scss';
 @import '../components/dropdown-menu/styles.scss';
 @import '../components/burguer-menu/styles.scss';
+@import '../components/lang-selector/styles.scss';
 
 @import '../pages/auth/styles.scss';
 @import '../pages/dashboard/styles.scss';
